keda/basic/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-app
  template:
    metadata:
      labels:
        app: http-app
    spec:
      containers:
      - name: http-app
        image: stefanprodan/podinfo
        ports:
        - containerPort: 9898
