keda/basic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-app-service
  labels:
    app: http-app
spec:
  selector:
    app: http-app
  ports:
  - name: metrics 
    port: 80
    targetPort: 9898
